// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Users Api all() parse the returned data correctly 1`] = `
{
  "data": [
    {
      "email": "tester@loxya.com",
      "first_name": "Jean",
      "full_name": "Jean Fountain",
      "group": "administration",
      "id": 1,
      "last_name": "Fountain",
      "phone": null,
      "pseudo": "test1",
    },
    {
      "email": "tester2@loxya.com",
      "first_name": "Roger",
      "full_name": "Roger Rabbit",
      "group": "operation",
      "id": 2,
      "last_name": "Rabbit",
      "phone": null,
      "pseudo": "test2",
    },
    {
      "email": "nobody@loxya.com",
      "first_name": "?",
      "full_name": "?",
      "group": "operation",
      "id": 3,
      "last_name": "?",
      "phone": null,
      "pseudo": "nobody",
    },
    {
      "email": "visitor@loxya.com",
      "first_name": "Henry",
      "full_name": "Henry Berluc",
      "group": "readonly-planning-general",
      "id": 4,
      "last_name": "Berluc",
      "phone": /* Phone Instance => */ "+33794589321",
      "pseudo": "TheVisitor",
    },
    {
      "email": "external@loxya.com",
      "first_name": "Caroline",
      "full_name": "Caroline Farol",
      "group": "readonly-planning-general",
      "id": 5,
      "last_name": "Farol",
      "phone": /* Phone Instance => */ "+33786325500",
      "pseudo": "caroline",
    },
  ],
  "pagination": {
    "currentPage": 1,
    "perPage": 5,
    "total": {
      "items": 5,
      "pages": 1,
    },
  },
}
`;

exports[`Users Api create() parse the returned data correctly (with #1) 1`] = `
{
  "additional_street": null,
  "address": "1, somewhere av.
12340 Megacity",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "tester@loxya.com",
  "first_name": "Jean",
  "full_name": "Jean Fountain",
  "group": "administration",
  "id": 1,
  "last_name": "Fountain",
  "locality": "Megacity",
  "phone": null,
  "postal_code": "12340",
  "pseudo": "test1",
  "street": "1, somewhere av.",
}
`;

exports[`Users Api create() parse the returned data correctly (with #2) 1`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "tester2@loxya.com",
  "first_name": "Roger",
  "full_name": "Roger Rabbit",
  "group": "operation",
  "id": 2,
  "last_name": "Rabbit",
  "locality": null,
  "phone": null,
  "postal_code": null,
  "pseudo": "test2",
  "street": null,
}
`;

exports[`Users Api create() parse the returned data correctly (with #3) 1`] = `
{
  "additional_street": null,
  "address": "156 bis, avenue des tests poussés
88080 Wazzaville",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "nobody@loxya.com",
  "first_name": "?",
  "full_name": "?",
  "group": "operation",
  "id": 3,
  "last_name": "?",
  "locality": "Wazzaville",
  "phone": null,
  "postal_code": "88080",
  "pseudo": "nobody",
  "street": "156 bis, avenue des tests poussés",
}
`;

exports[`Users Api create() parse the returned data correctly (with #4) 1`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "CH",
  "email": "visitor@loxya.com",
  "first_name": "Henry",
  "full_name": "Henry Berluc",
  "group": "readonly-planning-general",
  "id": 4,
  "last_name": "Berluc",
  "locality": null,
  "phone": /* Phone Instance => */ "+33794589321",
  "postal_code": null,
  "pseudo": "TheVisitor",
  "street": null,
}
`;

exports[`Users Api create() parse the returned data correctly (with #5) 1`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "external@loxya.com",
  "first_name": "Caroline",
  "full_name": "Caroline Farol",
  "group": "readonly-planning-general",
  "id": 5,
  "last_name": "Farol",
  "locality": null,
  "phone": /* Phone Instance => */ "+33786325500",
  "postal_code": null,
  "pseudo": "caroline",
  "street": null,
}
`;

exports[`Users Api getSettings() parse the returned data correctly 1`] = `
{
  "default_bookings_view": "calendar",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": true,
  "disable_search_persistence": false,
  "language": "en",
}
`;

exports[`Users Api getSettings() parse the returned data correctly 2`] = `
{
  "default_bookings_view": "calendar",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": true,
  "disable_search_persistence": false,
  "language": "en",
}
`;

exports[`Users Api getSettings() parse the returned data correctly 3`] = `
{
  "default_bookings_view": "calendar",
  "default_technicians_view": "timeline",
  "disable_contextual_popovers": true,
  "disable_search_persistence": true,
  "language": "fr",
}
`;

exports[`Users Api getSettings() parse the returned data correctly 4`] = `
{
  "default_bookings_view": "listing",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": false,
  "disable_search_persistence": false,
  "language": "fr",
}
`;

exports[`Users Api getSettings() parse the returned data correctly 5`] = `
{
  "default_bookings_view": "calendar",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": false,
  "disable_search_persistence": false,
  "language": "fr",
}
`;

exports[`Users Api getSettings() parse the returned data correctly 6`] = `
{
  "default_bookings_view": "calendar",
  "default_technicians_view": "timeline",
  "disable_contextual_popovers": false,
  "disable_search_persistence": false,
  "language": "en",
}
`;

exports[`Users Api one() parse the returned data correctly 1`] = `
{
  "additional_street": null,
  "address": "1, somewhere av.
12340 Megacity",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "tester@loxya.com",
  "first_name": "Jean",
  "full_name": "Jean Fountain",
  "group": "administration",
  "id": 1,
  "last_name": "Fountain",
  "locality": "Megacity",
  "phone": null,
  "postal_code": "12340",
  "pseudo": "test1",
  "street": "1, somewhere av.",
}
`;

exports[`Users Api one() parse the returned data correctly 2`] = `
{
  "additional_street": null,
  "address": "1, somewhere av.
12340 Megacity",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "tester@loxya.com",
  "first_name": "Jean",
  "full_name": "Jean Fountain",
  "group": "administration",
  "id": 1,
  "last_name": "Fountain",
  "locality": "Megacity",
  "phone": null,
  "postal_code": "12340",
  "pseudo": "test1",
  "street": "1, somewhere av.",
}
`;

exports[`Users Api one() parse the returned data correctly 3`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "tester2@loxya.com",
  "first_name": "Roger",
  "full_name": "Roger Rabbit",
  "group": "operation",
  "id": 2,
  "last_name": "Rabbit",
  "locality": null,
  "phone": null,
  "postal_code": null,
  "pseudo": "test2",
  "street": null,
}
`;

exports[`Users Api one() parse the returned data correctly 4`] = `
{
  "additional_street": null,
  "address": "156 bis, avenue des tests poussés
88080 Wazzaville",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "nobody@loxya.com",
  "first_name": "?",
  "full_name": "?",
  "group": "operation",
  "id": 3,
  "last_name": "?",
  "locality": "Wazzaville",
  "phone": null,
  "postal_code": "88080",
  "pseudo": "nobody",
  "street": "156 bis, avenue des tests poussés",
}
`;

exports[`Users Api one() parse the returned data correctly 5`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "CH",
  "email": "visitor@loxya.com",
  "first_name": "Henry",
  "full_name": "Henry Berluc",
  "group": "readonly-planning-general",
  "id": 4,
  "last_name": "Berluc",
  "locality": null,
  "phone": /* Phone Instance => */ "+33794589321",
  "postal_code": null,
  "pseudo": "TheVisitor",
  "street": null,
}
`;

exports[`Users Api one() parse the returned data correctly 6`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "external@loxya.com",
  "first_name": "Caroline",
  "full_name": "Caroline Farol",
  "group": "readonly-planning-general",
  "id": 5,
  "last_name": "Farol",
  "locality": null,
  "phone": /* Phone Instance => */ "+33786325500",
  "postal_code": null,
  "pseudo": "caroline",
  "street": null,
}
`;

exports[`Users Api restore() parse the returned data correctly (with #1) 1`] = `
{
  "additional_street": null,
  "address": "1, somewhere av.
12340 Megacity",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "tester@loxya.com",
  "first_name": "Jean",
  "full_name": "Jean Fountain",
  "group": "administration",
  "id": 1,
  "last_name": "Fountain",
  "locality": "Megacity",
  "phone": null,
  "postal_code": "12340",
  "pseudo": "test1",
  "street": "1, somewhere av.",
}
`;

exports[`Users Api restore() parse the returned data correctly (with #2) 1`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "tester2@loxya.com",
  "first_name": "Roger",
  "full_name": "Roger Rabbit",
  "group": "operation",
  "id": 2,
  "last_name": "Rabbit",
  "locality": null,
  "phone": null,
  "postal_code": null,
  "pseudo": "test2",
  "street": null,
}
`;

exports[`Users Api restore() parse the returned data correctly (with #3) 1`] = `
{
  "additional_street": null,
  "address": "156 bis, avenue des tests poussés
88080 Wazzaville",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "nobody@loxya.com",
  "first_name": "?",
  "full_name": "?",
  "group": "operation",
  "id": 3,
  "last_name": "?",
  "locality": "Wazzaville",
  "phone": null,
  "postal_code": "88080",
  "pseudo": "nobody",
  "street": "156 bis, avenue des tests poussés",
}
`;

exports[`Users Api restore() parse the returned data correctly (with #4) 1`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "CH",
  "email": "visitor@loxya.com",
  "first_name": "Henry",
  "full_name": "Henry Berluc",
  "group": "readonly-planning-general",
  "id": 4,
  "last_name": "Berluc",
  "locality": null,
  "phone": /* Phone Instance => */ "+33794589321",
  "postal_code": null,
  "pseudo": "TheVisitor",
  "street": null,
}
`;

exports[`Users Api restore() parse the returned data correctly (with #5) 1`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "external@loxya.com",
  "first_name": "Caroline",
  "full_name": "Caroline Farol",
  "group": "readonly-planning-general",
  "id": 5,
  "last_name": "Farol",
  "locality": null,
  "phone": /* Phone Instance => */ "+33786325500",
  "postal_code": null,
  "pseudo": "caroline",
  "street": null,
}
`;

exports[`Users Api update() parse the returned data correctly 1`] = `
{
  "additional_street": null,
  "address": "1, somewhere av.
12340 Megacity",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "tester@loxya.com",
  "first_name": "Jean",
  "full_name": "Jean Fountain",
  "group": "administration",
  "id": 1,
  "last_name": "Fountain",
  "locality": "Megacity",
  "phone": null,
  "postal_code": "12340",
  "pseudo": "test1",
  "street": "1, somewhere av.",
}
`;

exports[`Users Api update() parse the returned data correctly 2`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "tester2@loxya.com",
  "first_name": "Roger",
  "full_name": "Roger Rabbit",
  "group": "operation",
  "id": 2,
  "last_name": "Rabbit",
  "locality": null,
  "phone": null,
  "postal_code": null,
  "pseudo": "test2",
  "street": null,
}
`;

exports[`Users Api update() parse the returned data correctly 3`] = `
{
  "additional_street": null,
  "address": "156 bis, avenue des tests poussés
88080 Wazzaville",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "nobody@loxya.com",
  "first_name": "?",
  "full_name": "?",
  "group": "operation",
  "id": 3,
  "last_name": "?",
  "locality": "Wazzaville",
  "phone": null,
  "postal_code": "88080",
  "pseudo": "nobody",
  "street": "156 bis, avenue des tests poussés",
}
`;

exports[`Users Api update() parse the returned data correctly 4`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "CH",
  "email": "visitor@loxya.com",
  "first_name": "Henry",
  "full_name": "Henry Berluc",
  "group": "readonly-planning-general",
  "id": 4,
  "last_name": "Berluc",
  "locality": null,
  "phone": /* Phone Instance => */ "+33794589321",
  "postal_code": null,
  "pseudo": "TheVisitor",
  "street": null,
}
`;

exports[`Users Api update() parse the returned data correctly 5`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "email": "external@loxya.com",
  "first_name": "Caroline",
  "full_name": "Caroline Farol",
  "group": "readonly-planning-general",
  "id": 5,
  "last_name": "Farol",
  "locality": null,
  "phone": /* Phone Instance => */ "+33786325500",
  "postal_code": null,
  "pseudo": "caroline",
  "street": null,
}
`;

exports[`Users Api updateSettings() parse the returned data correctly 1`] = `
{
  "default_bookings_view": "calendar",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": true,
  "disable_search_persistence": false,
  "language": "en",
}
`;

exports[`Users Api updateSettings() parse the returned data correctly 2`] = `
{
  "default_bookings_view": "calendar",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": true,
  "disable_search_persistence": false,
  "language": "en",
}
`;

exports[`Users Api updateSettings() parse the returned data correctly 3`] = `
{
  "default_bookings_view": "calendar",
  "default_technicians_view": "timeline",
  "disable_contextual_popovers": true,
  "disable_search_persistence": true,
  "language": "fr",
}
`;

exports[`Users Api updateSettings() parse the returned data correctly 4`] = `
{
  "default_bookings_view": "listing",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": false,
  "disable_search_persistence": false,
  "language": "fr",
}
`;

exports[`Users Api updateSettings() parse the returned data correctly 5`] = `
{
  "default_bookings_view": "calendar",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": false,
  "disable_search_persistence": false,
  "language": "fr",
}
`;

exports[`Users Api updateSettings() parse the returned data correctly 6`] = `
{
  "default_bookings_view": "calendar",
  "default_technicians_view": "timeline",
  "disable_contextual_popovers": false,
  "disable_search_persistence": false,
  "language": "en",
}
`;
